final touches, puse fotos y separe por perri

--- a/tp-28/index.html
+++ b/tp-28/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>perriblog</h1>
+        <h1 class="title">PerriFotos</h1>
         <nav>
             <ul>
-                <li><a href="index.html">inicio</a></li>
-                <li><a href="galeria.html">galeria</a></li>
-                <li><a href="contacto.html">contacrto</a></li>
+                <li><a href="amber.html">Amber</a></li>
+                <li><a href="ipa.html">Ipa</a></li>
             </ul>
         </nav>
     </header>
@@ -21,10 +20,7 @@
         <section>
             <h2>fotos</h2>
             <div id="imagenes">
-                <img src="tp-28\static\amber.jpg" alt="">
-                <img src="tp-28\static\ipa.jpg" alt="">
-                <img src="tp-28\static\ipa2.jpg" alt="">
-
+                <img src="static\perris.jpeg" alt="">
             </div>
         </section>
     </main>
